--- a/templates/base.html
+++ b/templates/base.html
@@ -7,19 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     {% endblock %}
-
     <title>{% block title %}TastyHub{% endblock %}</title>
-    
+
     {% block corecss %}
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% endblock %}
-
     <!-- Custom CSS -->
     {% block extra_css %}   
 {% endblock %}
-
 {% block corejs %}
     <!--google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,14 +33,13 @@
   <!--Stripe-->
   <script src="https://js.stripe.com/v3/"></script>
 {% endblock %}
-
 </head>
 <body>
 <header class="container-fluid fixed-top">
     <div id="topnav" class="row bg-white pg-lg-2 d-none d-lg-flex">
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
             <a href="{% url 'hub'%}" class="nav-link main-logo-link">
-                <h2 class="logo-font text-black my-0"><strong>TASTY HUB</strong></h2>
+                <h1 class="logo-font text-black my-0"><strong>TASTY HUB</strong></h1>
             </a>
         </div>
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
@@ -76,7 +72,6 @@
                         <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
                         <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                         {% endif %}
-
                     </div>
                 </li>
                 <li class="list-inline-item">
@@ -96,37 +91,37 @@
             </ul>
         </div>
     </div>
+        <div class="col-12 d-lg-none text-center py-2">
+    <a href="{% url 'hub' %}" class="nav-link main-logo-link">
+        <h1 class="logo-font text-black my-0"><strong>TASTY HUB</strong></h1>
+    </a>
+</div>
+  
+
      <div class="row bg-white">
         <nav class="navbar navbar-expand-lg navbar-light w-100">
-            <button class="navbar-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navigation" aria-controls="main-navigation" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-        
+
             {% include 'includes/header.html' %}
-            
+
         </nav>
     </div>
     <div id="delivery-banner" class="row text-center">
         <div class="col bg-black text-white">
-            <h4 class="logo-font my-1">You can get a free delivery on orders over £{{ free_delevery_threshold }}!</h4>
+            <h4 class="logo-font my-1">You can get a free delivery on orders over £30.</h4>
         </div>
     </div>
 </header>
-
 {% if messages %}
-    <div class="alert alert-info alert-dismissible fade show" role="alert">
-        <strong>Info:</strong> You have new messages!
-        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-    </div>
    
-{% endif %}
 
+{% endif %}
 {% block page_header %}
    {% endblock %}
-
 {% block contain %}
 {% endblock %}
-
 {% block postloadjs %}
 {% endblock %}
  <!-- Messages -->
@@ -151,10 +146,9 @@
             <p>&copy; 2025 TastyHub.</p>
         </div>
     </footer>
-
     <!-- Bootstrap JS (Bundle includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-    
+
     <!-- Custom JS -->
     {% block extra_js %}{% endblock %}
 </body>
