remove the duplicate dropdown ids

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -68,7 +68,6 @@
                 </a>
             </div>
         </li>
-
         <li class="nav-item dropdown">
             <a class="brand-logo fw-bold nav-link text-primary-dark me-4" href="#" id="desserts-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Desserts
@@ -90,7 +89,6 @@
                 </a>
             </div>
         </li>
-
         <li class="nav-item dropdown">
             <a class="brand-logo fw-bold nav-link text-primary-dark me-4" href="#" id="mains-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Main Dishes
@@ -112,7 +110,6 @@
                 </a>
             </div>
         </li>
-
         <li class="nav-item dropdown">
             <a class="brand-logo fw-bold nav-link text-primary-dark" href="#" id="offers-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Special Offers
@@ -133,13 +130,13 @@
             
        
          <li class="nav-item dropdown">
-            <a class="brand-logo fw-bold nav-link text-primary-dark me-4" href="#" id="all-items-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="brand-logo fw-bold nav-link text-primary-dark me-4" href="#" id="contact-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Contact us for any Issues
                 <i class="fas fa-chevron-down ms-1 small"></i>
             </a>
-            <div class="dropdown-menu border-0 shadow-lg rounded-3" aria-labelledby="all-items-dropdown">
+            <div class="dropdown-menu border-0 shadow-lg rounded-3" aria-labelledby="contact-dropdown">
                 <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
             </div>
         </li>
     </ul>
-</div> 
+</div>
