--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,8 @@
 <head>
     {% block meta %}
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% endblock %}
     <title>{% block title %}TastyHub{% endblock %}</title>
 
